# c_edu_vec

./: CMakeLists.txt  readme.md
include/: edu_cmp.h  edu_print.h  edu_vec.h
include/internal/: edu_print.h
src/: edu_cmp.c  edu_print.c  edu_vec.c
test/: CMakeLists.txt  main.c
